finished all the feature and documentation
